--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: minima
-title: Santiago Neira
+theme: minimal
+title: Santiago Neira Lopez
 description: Applied Mathematics & Machine Learning
