--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: minimal
 title: Santiago Neira Lopez
 description: Applied Mathematics & Machine Learning
+header_pages:
+  - about.md
+  - projects.md
+
+
